--- a/portfolio.html
+++ b/portfolio.html
@@ -56,7 +56,7 @@
     <main>
       <!--Уникальни контент-->
       <section class="section">
-        <div class="container content-proekt"> 
+        <div class="container"> 
           <!-- <h1>Наши роботи</h1> -->
         <!--кнопки-->
         <ul class="button-container">
