--- a/index.html
+++ b/index.html
@@ -7,14 +7,12 @@
     <title>Web Studio</title>
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
-    />
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-      rel="stylesheet"
-    />
+      rel="stylesheet"/>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
@@ -23,8 +21,7 @@
       <div class="container">
         <nav class="nav">
           <a class="logo" href="./index.html"
-            ><span class="accent">Web</span>Studio</a
-          >
+            ><span class="accent">Web</span>Studio</a>
 
           <ul class="site-nav">
             <li class="saitt-nav-list">
@@ -41,9 +38,7 @@
 
         <ul class="adres-lin">
           <li class="link-links">
-            <a class="adres-link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
+            <a class="adres-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
           <li class="link-links tel">
             <a class="adres-link" href="tel:+380961111111">+38 096 111 11 11</a>
@@ -108,22 +103,19 @@
                 <img
                   src="./images/disain.jpg"
                   alt="проектируємо розробляємо"
-                  width="370"
-                />
+                  width="370"/>
               </li>
               <li class="foto-list">
                 <img
                   src="./images/work.jpg"
                   alt="розробляемо на разниє устройства"
-                  width="370"
-                />
+                  width="370"/>
               </li>
               <li class="foto-list">
                 <img
                   src="./images/app.jpg"
                   alt="тестируєм и запускаєм"
-                  width="370"
-                />
+                  width="370"/>
               </li>
             </ul>
           </div>
@@ -175,27 +167,20 @@
     <footer class="footer">
       <div class="container">
         <a class="logo-footer" href="./index.html"
-          >Web<span class="accent-footer">Studio</span></a
-        >
+          >Web<span class="accent-footer">Studio</span></a>
         <address class="adres-list">
           <ul >
             <li class="adres-list-text">
               <a
                 class="footer-adres"
                 href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
-                target="_blank"
-                >г. Киев, пр-т Леси Украинки, 26</a
-              >
+                target="_blank">г. Киев, пр-т Леси Украинки, 26</a>
             </li>
             <li class="adres-list-text">
-              <a class="footer-contact" href="mailto:info@example.com"
-                >info@example.com</a
-              >
+              <a class="footer-contact" href="mailto:info@example.com">info@example.com</a>
             </li>
             <li class="adres-list-text">
-              <a class="footer-contact" href="tel:+380991111111"
-                >+38 099 111 11 11</a
-              >
+              <a class="footer-contact" href="tel:+380991111111">+38 099 111 11 11</a>
             </li>
           </ul>
         </address>
