--- a/index.html
+++ b/index.html
@@ -94,10 +94,9 @@
       </section>
       <!--Чем ми занимаемся-->
 
-      <section class="section">
+      <section>
         <div class="container">
           <h2 class="about-title">Чем мы занимаемся</h2>
-          <div class="they">
             <ul class="foto">
               <li class="foto-list">
                 <img
@@ -118,7 +117,6 @@
                   width="370"/>
               </li>
             </ul>
-          </div>
         </div>
       </section>
       <!--Команда-->
